# practice

./: LICENSE
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: oracolo.yml
python/: .gitignore
python/ml/land-tagger/: .mypy.ini  .pylintrc  README.md  main.py  requirements.txt
python/ml/land-tagger/src/file/: file.py
python/ml/land-tagger/src/image/: image.py
python/ml/land-tagger/src/model/: model.py  model_interfaces.py  onnx.py  tensorflow.py
python/ml/land-tagger/src/utils/: base.py
python/ml/land-tagger/tests/: test.py
python/ml/land-tagger/tests/file/: file.py
python/ml/land-tagger/tests/image/: image.py
python/ml/land-tagger/tests/image/static/: README.md
python/ml/land-tagger/tests/model/: model.py
python/ml/land-tagger/tests/model/static/: linear-two-times-x-plus-one.keras  linear-two-times-x-plus-one.onnx
python/ml/land-tagger/tests/utils/: base.py
rust/http-server/: .gitignore  Cargo.toml  README.md
rust/http-server/src/: http.rs  lib.rs  main.rs
rust/http-server/src/http/: executor.rs  response.rs  server.rs
rust/rusty-journal/: Cargo.toml
rust/rusty-journal/src/: cli.rs  main.rs  tasks.rs
